[package]
name    = "devnet-compose"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
cliclack     = "0.2.5"
console      = "0.15.8"
embed-commit = { workspace = true }
itertools    = "0.12.1"
serde        = { workspace = true, features = ["derive", "std"] }
serde_json   = { workspace = true }
serde_with   = { workspace = true, features = ["macros", "json"] }
strum        = { version = "0.26.2", features = ["derive"] }
