[package]
name    = "devnet-compose"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
cliclack     = "0.2.5"
console      = "0.15.11"
embed-commit = { workspace = true }
itertools    = { workspace = true }
serde        = { workspace = true, features = ["derive", "std"] }
serde_json   = { workspace = true }
serde_with   = { workspace = true, features = ["macros", "json"] }
strum        = { workspace = true, features = ["derive"] }
