[package]
edition      = { workspace = true }
license-file = { workspace = true }
name         = "drip"
repository   = { workspace = true }
version      = "0.1.0"

[dependencies]
chain-utils        = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
dashmap            = { workspace = true }
prost              = { workspace = true }
protos             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = "1.0.118"
tendermint-rpc     = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tonic              = { workspace = true, features = ["transport", "tls", "tls-roots", "tls-webpki-roots"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
unionlabs          = { workspace = true }

async-graphql      = "7.0.6"
async-graphql-axum = "7.0.6"
async-sqlite       = "0.2.2"
axum               = "0.7.5"
recaptcha-verify   = "0.1.5"
subtle-encoding    = { workspace = true, features = ["bech32-preview"] }

[lints]
workspace = true
