[package]
name    = "drip"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
chain-utils        = { workspace = true }
chrono             = { workspace = true, features = ["clock"] }
clap               = { workspace = true, features = ["derive"] }
prost              = { workspace = true }
protos             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tendermint-rpc     = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
unionlabs          = { workspace = true }


async-graphql      = "7.0.6"
async-graphql-axum = "7.0.6"
async-sqlite       = "0.2.2"
axum               = "0.7.5"
recaptcha-verify   = "0.1.5"
subtle-encoding    = { workspace = true, features = ["bech32-preview"] }
