[package]
name    = "drip"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow             = "1.0.95"
async-graphql      = "7.0.6"
async-graphql-axum = "7.0.6"
async-sqlite       = { version = "0.2.2", features = ["bundled", "array", "vtab"] }
axum               = "0.7.5"
chrono             = { workspace = true, features = ["clock"] }
clap               = { workspace = true, features = ["derive"] }
cometbft-rpc       = { workspace = true }
cosmos-client      = { workspace = true }
embed-commit       = { workspace = true }
prost              = { workspace = true }
protos             = { workspace = true }
reqwest            = { workspace = true, features = ["json", "rustls-tls"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
subtle-encoding    = { workspace = true, features = ["bech32-preview"] }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
unionlabs          = { workspace = true }
