[package]
name = "event_listener"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
alloy          = { workspace = true, features = ["rpc", "rpc-types", "transports", "transport-http", "transport-ws", "reqwest", "provider-ws"] }
tokio             = { workspace = true }
cometbft-rpc      = { workspace = true }
anyhow            = { workspace = true }
futures           = { workspace = true }
cosmos-sdk-event = { workspace = true }
tracing          = { workspace = true }
bincode          = { workspace = true, features = ["derive"] }
clap             = { workspace = true, features = ["derive"] }
dashmap          = { workspace = true }
embed-commit     = { workspace = true }
enumorph         = { workspace = true }
ibc-classic-spec = { workspace = true }
ibc-solidity   = { workspace = true, features = ["serde", "rpc"] }
ibc-union-spec   = { workspace = true, features = ["tracing", "bincode", "serde"] }
jsonrpsee        = { workspace = true, features = ["macros", "server", "tracing"] }
macros           = { workspace = true }
prost            = { workspace = true }
protos           = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
serde-utils      = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true, features = ["std"] }
thiserror        = { workspace = true }
unionlabs        = { workspace = true, features = ["bincode"] }
voyager-sdk      = { workspace = true }
wasm-client-type = { workspace = true }
tracing-subscriber          = { workspace = true, features = ["env-filter", "fmt", "ansi"] }


[lints]
workspace = true
