[package]
name    = "hubble"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

include = [".sqlx"]

[lints]
workspace = true

[[bin]]
name = "hubble"
path = "src/main.rs"

[dependencies]
# aptos-rest-client  = { workspace = true }
alloy              = { workspace = true, features = ["eips", "rpc", "rpc-types", "serde", "transports", "transport-http", "providers", "reqwest", "dyn-abi", "json-abi", "eip712"] }
alloy-primitives   = { workspace = true }
async-nats         = { version = "0.41.0" }
axum               = { workspace = true, features = ["macros", "tokio"] }
backon             = "0.4.4"
base64             = { workspace = true }
bech32             = "0.11.0"
bytes              = { version = "1.10.1" }
clap               = { workspace = true, features = ["derive", "env", "error-context"] }
color-eyre         = { workspace = true, features = ["default"] }
cometbft-rpc       = { workspace = true }
embed-commit       = { workspace = true }
futures            = { workspace = true, features = ["async-await"] }
hex                = { workspace = true }
itertools          = { workspace = true }
jsonrpsee          = { workspace = true, features = ["tracing", "ws-client", "http-client"] }
lazy_static        = { workspace = true }
lz4_flex           = "0.11.3"
prometheus         = { version = "0.13.4", features = ["process"] }
reqwest            = { workspace = true, features = ["json", "blocking", "rustls-tls"] }
ruint              = { version = "1.15.0", features = ["primitive-types", "num-bigint"] }
serde              = { workspace = true, features = ["derive"] }
serde-utils        = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
sqlx               = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "time", "macros", "json", "bigdecimal"] }
tempfile           = "3.20.0"
thiserror          = { workspace = true }
time               = { workspace = true, features = ["serde"] }
tokio              = { workspace = true, features = ["full"] }
tonic              = { workspace = true, features = ["transport", "tls", "tls-roots", "tls-webpki-roots"] }
tracing            = { workspace = true }
tracing-error      = { version = "0.2.1" }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "tracing-log"] }
unionlabs          = { workspace = true, features = ["ethabi"] }
url                = { version = "2.5.4", features = ["serde"] }
valuable           = { version = "0.1.1", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
