[package]
name = "poc-relayer"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = [ "full" ] }
near-primitives = "0.23.0"
near-crypto             = "0.23"
base64      = { workspace = true }
serde_json  = { workspace = true }
near-jsonrpc-client = "0.10.1"
near-jsonrpc-primitives = "0.23"
unionlabs          = { workspace = true, features = [ "near" ] }
near-primitives-core = { version = "0.23" }
serde.workspace = true
borsh                             = { workspace = true, features = ["borsh-derive"] }
cometbft-rpc             = { workspace = true }
tendermint-rpc           = { workspace = true, features = ["http-client", "websocket-client", "default"] }
chain-utils = { workspace = true }
prost                    = { workspace = true }
protos.workspace = true
hex.workspace = true
ibc-vm-rs.workspace = true
near-verifier = { workspace = true }
tendermint               = { workspace = true }
num-bigint               = { workspace = true }
tendermint-proto         = { workspace = true }

[lints]
workspace = true
